# sfml-tmxloader

./: .gitignore  CMakeLists.txt  README  README.md
cmake/Modules/: FindSFML.cmake
docs/: Doxyfile
examples/: AddRemoveObjects.cpp  Benchmark.cpp  Box2D.cpp  DrawMapWithDebug.cpp  IsometricWithConvertCoords.cpp  MapWithQuadTree.cpp  ShaderEffects.cpp
include/: DebugShape.h  Helpers.h  MapLoader.h  MapObject.h  QuadTreeNode.h
include/tmx/: DebugShape.h  DebugShape.hpp  Export.hpp  Helpers.h  Helpers.hpp  Log.h  Log.hpp  MapLayer.h  MapLayer.hpp  MapLoader.h  MapLoader.hpp  MapObject.h  MapObject.hpp  QuadTreeNode.h  QuadTreeNode.hpp  tmx2box2d.h  tmx2box2d.hpp
lib/: requires zlib and SFML 2.x.txt
maps/: addRemove.tmx  b2d.tmx  desert.tmx  desert.tsx  isometric_grass_and_water.tmx  shader_example.tmx
src/: DebugShape.cpp  Log.cpp  MapLayer.cpp  MapLoaderPrivate.cpp  MapLoaderPublic.cpp  MapObject.cpp  QuadTreeNode.cpp  tmx2box2d.cpp
src/pugixml/: pugixml.cpp
tests/: Makefile  main_tmxloader.cpp  test  test.pro  test.sh
